--- a/resources/assets/sass/2-layouts/_videoblog-view-body.scss
+++ b/resources/assets/sass/2-layouts/_videoblog-view-body.scss
@@ -5,7 +5,7 @@
     padding:2% 10%;
     text-align:left;
     div#search-bar.search-bar{
-        width:27%;
+        //width:27%;
         height:45px;
         padding-right:2px;
         @include displayFlex(flex-start, row, center);
@@ -140,8 +140,8 @@
                             z-index:3;
                             // background:no-repeat center url(../images/play.png);
                             .arrow-right{
-                                width: 0; 
-                                height: 0; 
+                                width: 0;
+                                height: 0;
                                 border-top: 15px solid transparent;
                                 border-bottom: 15px solid transparent;
                                 border-left: 20px solid #09118E;
