--- a/resources/assets/sass/2-layouts/_mmenu.scss
+++ b/resources/assets/sass/2-layouts/_mmenu.scss
@@ -1,7 +1,7 @@
 #page{
     .content{
         padding:0 !important;
-        text-align: center;
+        text-align: start;
     }
     .header{
         display: none;
@@ -85,7 +85,7 @@
                         }
                     }
                 }
-                
+
                 &.cart{
                     i{
                         position: relative;
@@ -204,7 +204,7 @@ nav#menu{
             height: 20px;
             margin-right: 10px;
             display: inline-block;
-            border: none;  
+            border: none;
         }
     }
     .mm-btn_close{
@@ -220,7 +220,7 @@ nav#menu{
             background:transparent !important;
         }
     }
-    
+
     .mm-btn_prev, .mm-navbar__title{
         background:$item_price_color;
     }
@@ -230,7 +230,7 @@ nav#menu{
     .mm-navbar__title span {
         color:white;
     }
-    
+
 }
 // search icon and bar 414px
 
@@ -251,7 +251,7 @@ nav#menu{
         a{
             opacity:1;
             transition: transform 0.2s, opacity 0.2s 0.1s;
-            
+
             $time-offset: 0.3;
 			@for $i from 1 through 5 {
 				&:nth-child(#{$i}) {
@@ -297,7 +297,7 @@ nav#menu{
         .other-icons{
             a{
                 transform: scale(0.8);
-				opacity: 0; 
+				opacity: 0;
             }
         }
 
@@ -345,7 +345,7 @@ nav#menu{
 	}
 
 	&.active {
-		
+
 		&::before{
 			width: 0;
 			border-width: 1px;
@@ -379,7 +379,7 @@ nav#menu{
 }
 @media all and (max-width:600px){
     #page{
-        .header{ 
+        .header{
             padding:0 4% 0 2%;
         }
     }
@@ -394,7 +394,7 @@ nav#menu{
         }
     }
     #page{
-        .header{ 
+        .header{
             .other-icons{
                 a{
                     i{
@@ -451,7 +451,7 @@ nav#menu{
 }
 @media all and (max-width:300px){
     #page{
-        .header{ 
+        .header{
             .other-icons{
                 a{
                     button.search {
