--- a/resources/sass/2-layouts/_top-brands.scss
+++ b/resources/sass/2-layouts/_top-brands.scss
@@ -5,20 +5,6 @@
     box-sizing:border-box;
     background:white;
     text-align:left;
-    // .two-rows-brands{
-    //     height:45px;
-    //     .col-1{
-    //         width:33%;
-    //         display:flex;
-    //         justify-content: center;
-    //         padding:0;
-    //         margin:0 0 10px 0;
-    //         img{
-    //             width:auto;
-    //             height:40px;
-    //         }
-    //     }
-    // }
     .one-row-brands{
         height:45px;
         display: flex;
@@ -26,10 +12,12 @@
             width:33%;
             height:45px;
             @include displayFlex(center, row, center);
-            img
-            {
-                width:auto;
+            a{
                 height:100%;
+                img{
+                    width:auto;
+                    height:100%;
+                }
             }
         }
     }
@@ -42,14 +30,3 @@
         top:0;
     }
 }
-// @media all and (max-width:1200px){
-//     .top-brands{
-//         height:120px;
-//         .two-rows-brands{
-//             display: none;
-//         }
-//         .one-row-brands{
-//             display: flex;
-//         }
-//     }
-// }
