--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -70,6 +70,12 @@ h6.title{
     text-align: start;
     width:100%;
     color:$item_title_color;
+    a{
+        color:$item_title_color; 
+        &:hover, &.active{
+            color:$link_hover_color;
+        }
+    }
 }
 p.description{
     color:white;
@@ -80,6 +86,12 @@ p.sub-title{
     color: $comment_color;
     font-size:18px;
     text-align: left;
+    a{
+        color: $comment_color; 
+        &:hover, &.active{
+            color:$link_hover_color;
+        }
+    }
 }
 .btn-yellow{
     border-radius:23px;
