--- a/resources/sass/2-layouts/_main-header.scss
+++ b/resources/sass/2-layouts/_main-header.scss
@@ -17,6 +17,7 @@
         padding-right:2px;
         @include displayFlex(flex-start, row, center);
         @include border(1px, $link_hover_color, 23px);
+        position:relative;
         .input-with-tags{
             width:85%;
             overflow:hidden;
@@ -56,6 +57,94 @@
                 }
             }
         }
+        .autocomplete-tags{
+            @include displayFlex(center, column, center);
+            min-height:40px;
+            width:95%;
+            margin:0 auto;
+            position:absolute;
+            top:45px;
+            z-index:1;
+            background:white;
+            box-shadow:0px 2px 7px -5px black;
+            display: none;
+            a{
+                display: block;
+                width:100%;
+            }
+            .item{
+                @include displayFlex(flex-start, row, center);
+                height:30px;
+                width:100%;
+                position:relative;
+                height:40px;
+                cursor:pointer;
+                &.brand, &.product{
+                    height:55px;
+                }
+                &:after{
+                    content: "";
+                    width: 93%;
+                    position:absolute;
+                    top:100%;
+                    display: inherit;
+                    margin: auto auto auto 7%;
+                    border-top: 1px solid #DFDFDF;
+                }
+                &:hover{
+                    background-color:$bg_dropdown_hover;
+                    transition:0.4s ease;
+                    .description h6.title, h6.title{
+                        color:$item_price_color;
+                    }
+                }
+                i.mbgotoresults_searchresulticon{
+                    position: absolute;
+                    top: 40%;
+                    right: 4%;
+                    font-size: 12px;
+                }
+                i.mbsearch_resulticon{
+                    font-size:20px;
+                    margin-right:10px; 
+                    line-height:40px;
+                    padding:0 5px;
+                }
+                .image{
+                    width:25px;
+                    height:25px;
+                    margin-right:10px;
+                    margin-left:7px;
+                    img{
+                        width:100%;
+                        height:100%;
+                    }
+                }
+                .description{
+                    @include displayFlex(space-between, column, flex-start);
+                    h6.title{
+                        font-size:20px;
+                        line-height:22px;
+                        color:black;
+                        margin:0;
+                    }
+                    p.sub-title{
+                        font-size:14px;
+                        margin:0;
+                        &.brand{
+                            color:$comment_color;
+                        }
+                        &.price{
+                            font-weight:bold;
+                            color:$title_color;
+                            span{
+                                font-weight:normal;
+                            }
+                        }
+                    }
+                }
+            }
+        }
         .nice-select.select-main-search{
             width:auto;
             box-shadow: none;
@@ -68,6 +157,7 @@
                 border-color:$title_color;
             }
             .list{
+                width:100%;
                 border:none;
                 border-radius:0;
                 color:#212529;
@@ -182,9 +272,10 @@
                             &:hover{
                                 color:#000 !important;
                                 background-color:$bg_dropdown_hover !important;
+                                transition:0.4s ease;
                                 a{
                                     h5.title{
-                                        color:$item_price_color;
+                                        color:$item_price_color !important;
                                     }
                                 }
                             }
