--- a/resources/assets/sass/2-layouts/_nav-header.scss
+++ b/resources/assets/sass/2-layouts/_nav-header.scss
@@ -3,7 +3,7 @@ nav#main_navbar{
   @include displayFlex(space-between, row, center);
   height:50px;
   background: white;
-  
+
   .dropdown:after{
     content:'';
     width:84%;
@@ -28,7 +28,7 @@ nav#main_navbar{
     border-width: 0;
   }
   .dropdown-menu .dropdown .dropdown-menu a {
-    padding-left:15%;
+    padding-left:15px;
   }
   .collapse{
     margin-right:1%;
@@ -208,22 +208,22 @@ nav#main_navbar{
           }
           .round{
             span:nth-child(1) {
-              transform: rotate(-135deg); 
+              transform: rotate(-135deg);
             }
             span:nth-child(2) {
-              transform: rotate(135deg); 
+              transform: rotate(135deg);
             }
             span:nth-child(3) {
-              transform: rotate(45deg); 
+              transform: rotate(45deg);
             }
             span:nth-child(4) {
-              transform: rotate(-45deg); 
+              transform: rotate(-45deg);
             }
             span:nth-child(5) {
-              transform: rotate(45deg); 
+              transform: rotate(45deg);
             }
             span:nth-child(6) {
-              transform: rotate(-45deg); 
+              transform: rotate(-45deg);
             }
           }
         }
