--- a/resources/assets/sass/2-layouts/_product-of-day.scss
+++ b/resources/assets/sass/2-layouts/_product-of-day.scss
@@ -49,7 +49,7 @@
                 position:relative;
                 @include displayFlex(center, row, center);
                 img{
-                    width:auto;
+                    width:100%;
                     height:auto;
                 }
                 span.sale{
