--- a/resources/assets/sass/2-layouts/_nav-header.scss
+++ b/resources/assets/sass/2-layouts/_nav-header.scss
@@ -188,21 +188,26 @@ nav#main_navbar{
         position:absolute;
         top:0;
         left:196%;
-        width:220px;
+        width:110px;
         height:100%;
-        column-count: 2;
+        column-count: 1;
         column-fill: auto;
         column-gap: 0;
+        background-color: #fff;
+        padding: 10px;
         .all-brands {
-            color: #0042ff;
             background-color: #fff;
             padding: 5px;
             width: 100%;
-            font-size: 16px;
+            a {
+                color: #0042ff;
+                font-size: 16px;
+            }
         }
         img{
           width:100%;
           height:20%;
+          padding: 5px 0;
         }
       }
       .dropdown{
