--- a/resources/assets/sass/2-layouts/_pagination.scss
+++ b/resources/assets/sass/2-layouts/_pagination.scss
@@ -18,13 +18,14 @@ nav.products-pagination{
                 }
             }
             a{
-                color:$title_color;;
+                color:$title_color;
                 line-height:50px;
                 font-size:20px;
                 padding:0;
                 font-weight:bold;
                 border:none;
                 background:transparent;
+                text-align: center;
                 i{
                     font-size:15px;
                     line-height: 50px;
@@ -43,4 +44,5 @@ nav.products-pagination{
     line-height:50px;
     font-weight:bold;
     padding:0;
+    text-align: center;
 }
