--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -1001,7 +1001,7 @@ form.big-filter-without-title-checkbox{
 //             margin-top:1%;
 //             text-decoration: underline;
 //         }
-       
+
 //     }
 //     input#submit{
 //         background:$item_price_color;
@@ -1029,7 +1029,7 @@ form.big-filter-without-title-checkbox{
 //                 left:-5px;
 //             }
 //         }
-        
+
 //     }
 // }
 form.big-filter-with-listof-checkbox{
@@ -1124,6 +1124,19 @@ form.small-filter{
     img{
         width:100%;
         height:100%;
+    }
+}
+.category-btn {
+    color: #0042ff;
+    font-size: 22px;
+}
+.custom-checkbox {
+    ul {
+        padding-left: 0;
+        li.category-list {
+            list-style-type: none;
+            margin: 5px;
+        }
     }
 }
 @media all and(max-width:1800px){
