--- a/resources/assets/sass/2-layouts/_sales-body.scss
+++ b/resources/assets/sass/2-layouts/_sales-body.scss
@@ -12,8 +12,8 @@
             background-repeat: no-repeat;
         }
         .banner-item{
-            width:32%;
-            margin:1% auto;
+            width:23%;
+            margin:1%;
             height:auto;
             position:relative;
             img{
