page show style

--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -1139,6 +1139,9 @@ form.small-filter{
         }
     }
 }
+.padding-1-10 {
+    padding: 1% 10%;
+}
 @media all and(max-width:1800px){
     .outter-catalog-view, .outter-brand-view-body{
         .wrapper-filtered-items{
