--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -13,7 +13,9 @@ body{
     text-align: center;
     color: black;
     font-size: 22px;
-    margin-top: 50%;
+    //margin-top: 50%;
+    min-height: 100px;
+    padding-top: 36px;
 }
 
 a{
