--- a/resources/assets/sass/2-layouts/_main-header.scss
+++ b/resources/assets/sass/2-layouts/_main-header.scss
@@ -239,6 +239,7 @@
                                 right:-21px;
                                 transition: .2s linear;
                                 transform: scale(1);
+                                text-align: center;
                             }
                         }
                     }
