product of day style

--- a/resources/assets/sass/2-layouts/_price-rating-comments.scss
+++ b/resources/assets/sass/2-layouts/_price-rating-comments.scss
@@ -4,6 +4,7 @@
         flex-flow:column;
         justify-content:flex-start;
         align-items:flex-start;
+        padding: 5px 0;
     }
     &.horizontal{
         flex-flow:row;
@@ -32,6 +33,7 @@
 .item-action-icons{
     @include displayFlex(flex-start, row, center);
     width: 100%;
+    padding: 10px 0;
     // position:absolute;
     bottom:0;
     div{
