--- a/resources/assets/sass/2-layouts/_price-rating-comments.scss
+++ b/resources/assets/sass/2-layouts/_price-rating-comments.scss
@@ -11,6 +11,7 @@
         justify-content:space-between;
         width:100%;
         align-items:center;
+        padding-top: 8px;
     }
     h5.price{
         font-size:24px;
@@ -33,7 +34,7 @@
 .item-action-icons{
     @include displayFlex(flex-start, row, center);
     width: 100%;
-    padding: 10px 0;
+    //padding: 10px 0;
     // position:absolute;
     bottom:0;
     div{
